# TradingAgents-CN

./: .dockerignore  .env.example  .gitignore  ACKNOWLEDGMENTS.md  AUTHENTICATION_FIX_SUMMARY.md  CLAUDE.md  CONTRIBUTORS.md  Dockerfile  FIXES_SUMMARY.md  QUICKSTART.md  README.md  SIMPLIFIED_CHINESE_CLEANUP_SUMMARY.md  SIMPLIFIED_CHINESE_FIX_REPORT.md  TRADITIONAL_CHINESE_FIX_COMPLETE.md  TRADITIONAL_CHINESE_UPDATE_REPORT.md  argocd-application.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-docker.txt  requirements-lock.txt  requirements.txt  start_app.py  start_debug_services.bat  start_web.bat  start_web.ps1  start_web.py  start_web.sh  test_fix.py  test_mongodb_check.py  test_tc_simple.py  test_traditional_chinese.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: ci-cd.yml  upstream-sync-check.yml
.streamlit/: config.toml
app/: main.py
app/routers/: analysis.py  config.py  trending.py
app/templates/: index.html
app/utils/: news_parser.py  (+2 more)
cli/: __init__.py  main.py  models.py  utils.py
config/: README.md  logging.toml  logging_docker.toml  models.json
docs/: COMPATIBILITY_FIX_SUMMARY.md  DATABASE_SETUP_GUIDE.md  DATA_DIRECTORY_MIGRATION_COMPLETED.md  DATA_DIRECTORY_REORGANIZATION_PLAN.md  DEVELOPMENT_SETUP.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_UPDATE_SUMMARY.md  EMERGENCY_PROCEDURES.md  ENHANCED_HISTORY_FEATURES_SUMMARY.md  GITHUB_BRANCH_PROTECTION.md  INSTALLATION_GUIDE.md  LLM_ADAPTER_TEMPLATE.py  QUICK_START.md  README.md  REQUIREMENTS_DB_UPDATE.md  STRUCTURE.md  TUSHARE_ARCHITECTURE_REFACTOR.md  TUSHARE_INTEGRATION_SUMMARY.md  TUSHARE_USAGE_GUIDE.md  analysis-nodes-and-tools.md  database_setup.md  financial_metrics_fix_report.md  google_ai_dependencies_update.md  google_models_guide.md  installation-mirror.md  model_update_summary.md  progress-tracking-explanation.md  quick-reference-nodes-tools.md  research-depth-guide.md  startup-commands-update.md
examples/: README.md  batch_analysis.py  cli_demo.py  config_management_demo.py  custom_analysis_demo.py  data_dir_config_demo.py  demo_deepseek_analysis.py  demo_deepseek_simple.py  demo_news_filtering.py  enhanced_history_demo.py  my_stock_analysis.py  simple_analysis_demo.py  stock_list_example.py  stock_query_examples.py  test_installation.py  test_news_timeout.py  token_tracking_demo.py  tushare_demo.py
reports/: duplicate_logger_fix_report.md  logger_position_fix_report.md  logging_import_fix_report.md  print_to_log_conversion_report.md  syntax_error_files_report.txt
scripts/: README.md  USER_MANAGEMENT.md  analyze_data_calls.py  backup_branches.sh  batch_update_docs.py  build_docker_with_pdf.py  capture_web_screenshots.py  check_api_config.py  check_doc_consistency.py  check_missing_dependencies.py  compare_requirements.py  convert_prints_to_logs.py  debug_docker.ps1  debug_docker.sh  demo_user_activity.py  diagnose_empty_data.py  disable_structured_logs.py  download_finnhub_data.py  ensure_logs_dir.py  extract_error_files.py  fix_chromadb.ps1  fix_chromadb.sh  fix_chromadb_win10.ps1  fix_docker_logging.py  fix_duplicate_loggers.py  fix_logger_position.py  fix_logging_config_error.py  fix_logging_imports.py  fix_pyyaml_windows.ps1  fix_stock_code_issue.py  get_container_logs.py  get_main_branch_logs.py  init-directories.ps1  init-directories.sh  install_and_run.py  install_pandoc.py  install_pdf_tools.py  k8s-setup-secrets.sh  log_analyzer.py  migrate_data_directories.py  (+42 more)
tests/: FILE_ORGANIZATION_SUMMARY.md  README.md  akshare_check_fixed.py  akshare_isolated_test.py  analyze_akshare_data.py  check_gemini_models.py  check_key_metrics.py  debug_deepseek_cost.py  debug_deepseek_cost_issue.py  debug_full_flow.py  debug_imports.py  debug_test_execution.py  debug_tool_binding_issue.py  debug_web_issue.py  demo_fallback_system.py  diagnose_gemini_25.py  final_gemini_test.py  fundamentals_analyst_clean.py  quick_akshare_check.py  quick_redis_test.py  quick_test.py  quick_test_hk.py  simple_akshare_test.py  simple_env_test.py  test_002027_specific.py  test_agent_utils_tushare_fix.py  test_akshare_api.py  test_akshare_debug.py  test_akshare_direct.py  test_akshare_functionality.py  test_akshare_hk.py  test_akshare_priority.py  test_akshare_priority_clean.py  test_akshare_priority_fix.py  test_all_analysts_hk_fix.py  test_all_apis.py  test_analysis.py  test_analysis_with_apis.py  test_baostock_quick.py  test_cache_optimization.py  (+129 more)
tradingagents/: __init__.py  default_config.py
utils/: check_simplified.py  check_version_consistency.py  cleanup_unnecessary_dirs.py  data_config.py  fundamentals_analysis_fix.md  inline_converter.py  update_data_source_references.py
web/: CACHE_CLEANING_GUIDE.md  README.md  app.py  run_web.py
(+324 files in other folders)
