[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.4.5"
description = "AI-powered US stock trading analysis agents with multi-agent debate system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "certifi>=2026.2.25",
    "chromadb>=1.0.12",
    "cryptography>=46.0.5",
    "fastapi>=0.130.0",
    "feedparser>=6.0.11",
    "finnhub-python>=2.4.23",
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.4",
    "langchain-classic>=1.0.0",
    "langchain-core>=1.2.16",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-openai>=1.1.9,<1.1.10",
    "langgraph>=1.0.0",
    "markdown>=3.4.0",
    "openai>=1.68.0,<2.0.0",
    "pandas>=2.3.0",
    "plotly>=5.0.0",
    "psutil>=6.1.0",
    "pymongo>=4.6.3",
    "pypandoc>=1.11",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.5",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tornado>=6.5.4",
    "tqdm>=4.67.1",
    "typer>=0.9.0",
    "uvicorn[standard]>=0.40.0",
    "yfinance>=1.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
tradingagents = "main:main"

[tool.setuptools.packages.find]
include = ["tradingagents*"]
exclude = ["tests*", "docs*", "scripts*", "data*", "logs*", "reports*", "results*", "eval_results*", "upstream_contribution*"]
